[package]
name = "validate-ro"
version = "0.3.1"
edition = "2024"
description = "A flexible validation framework with sync/async support and MongoDB integration"
license = "MIT OR Apache-2.0"
authors = ["Kak Smko <ba.smko@gmail.com>"]
repository = "https://github.com/kak-smko/validate-ro"
documentation = "https://docs.rs/validate-ro"
readme = "README.md"
keywords = ["validation", "validator", "forms", "mongodb", "async"]
categories = ["web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
mongodb = "3.2.3"
serde_json = "1.0.140"
regex = "1.11.1"
async-trait = "0.1.85"
serde = "1.0.219"
